fix: reduce spacing in card headers and navbar

--- a/src/components/Layout/NavigationBar.scss
+++ b/src/components/Layout/NavigationBar.scss
@@ -9,8 +9,8 @@
   }
 
   .navbar-brand-image {
-    height: 50px;
-    padding: 0 auto;
+    height: 35px;
+    padding-left: 1rem;
   }
 }
 
