--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -35,7 +35,7 @@
 
   .card-header.card-with-controls-header,
   .card-header.card-header-collapsible {
-    padding: 1em 1.25em;
+    padding: 0.4rem 1rem;
     background-color: $gray-700;
 
     h2 {
